--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,6 +8,7 @@ crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
 anyhow = "1.0.100"
+derive_more = { version = "2.1.1", features = ["from", "try_into", "unwrap"] }
 flutter_rust_bridge = { version = "=2.11.1", default-features = false, features = [
     "anyhow",
     "dart-opaque",
@@ -17,6 +18,7 @@ flutter_rust_bridge = { version = "=2.11.1", default-features = false, features 
     "user-utils",
     "wasm-start",
 ] }
+futures-util = "0.3.31"
 iroh = { version = "0.95.1", features = ["discovery-local-network"] }
 iroh-blobs = "0.97.0"
 postcard = { version = "1.1.3", features = ["alloc"] }
@@ -24,6 +26,7 @@ rand = { version = "0.9.2", features = ["os_rng"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.148"
 tokio = { version = "1.48.0", features = ["fs"] }
+tokio-util = { version = "0.7.17", features = ["codec"] }
 toml_edit = { version = "0.24.0", features = ["serde"] }
 tracing = "0.1.44"
 tracing-subscriber = "0.3.22"
