--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,14 +1,13 @@
 [package]
 name = "rust_lib_teleport"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [lib]
 crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
 anyhow = "1.0.100"
-derive_more = { version = "2.1.1", features = ["from", "try_into", "unwrap"] }
 flutter_rust_bridge = { version = "=2.11.1", default-features = false, features = [
     "anyhow",
     "dart-opaque",
@@ -21,6 +20,7 @@ flutter_rust_bridge = { version = "=2.11.1", default-features = false, features 
 futures-util = "0.3.31"
 iroh = { version = "0.95.1", features = ["discovery-local-network"] }
 iroh-blobs = "0.97.0"
+kameo = "0.19.2"
 postcard = { version = "1.1.3", features = ["alloc"] }
 rand = { version = "0.9.2", features = ["os_rng"] }
 serde = { version = "1.0.228", features = ["derive"] }
