--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -20,6 +20,7 @@ flutter_rust_bridge = { version = "=2.11.1", default-features = false, features 
 futures-util = "0.3.31"
 iroh = { version = "0.95.1", features = ["discovery-local-network"] }
 iroh-blobs = "0.97.0"
+iroh-quinn-proto = "0.13.0"
 kameo = "0.19.2"
 postcard = { version = "1.1.3", features = ["alloc"] }
 rand = { version = "0.9.2", features = ["os_rng"] }
