--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  collection: ^1.18.0
   rust_lib_teleport:
     path: rust_builder
   flutter_rust_bridge: 2.11.1
@@ -44,6 +45,10 @@ dependencies:
   pretty_qr_code: ^3.5.0
   mobile_scanner: ^7.1.4
   freezed_annotation: ^3.1.0
+  flutter_foreground_task: ^9.2.0
+  flutter_local_notifications: ^19.5.0
+  open_filex: ^4.5.0
+  flutter_sharing_intent: ^2.0.4
 
 dev_dependencies:
   flutter_test:
