--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
         android:label="Teleport"
-        android:name="${applicationName}"
+        android:name=".TeleportApplication"
         android:icon="@mipmap/ic_launcher"
     >
         <activity
@@ -26,12 +26,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ShareActivity"
+        <activity-alias
+            android:name=".ShareTarget"
+            android:targetActivity=".MainActivity"
             android:exported="true"
             android:launchMode="singleTask"
-            android:excludeFromRecents="true"
-            android:noHistory="true"
+            android:documentLaunchMode="always"
+            android:taskAffinity="${applicationId}.share"
             android:theme="@style/LaunchTheme"
         >
             <intent-filter>
@@ -44,31 +45,27 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="*/*" />
             </intent-filter>
-        </activity>
+        </activity-alias>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data android:name="flutterEmbedding" android:value="2" />
 
-        <!-- Register the service -->
         <service
             android:name="com.pravera.flutter_foreground_task.service.ForegroundService"
-            android:foregroundServiceType="dataSync"
+            android:foregroundServiceType="remoteMessaging"
             android:exported="false"
         />
     </application>
-    <!-- Required to query activities that can process text, see:
-         https://developer.android.com/training/package-visibility and
-         https://developer.android.com/reference/android/content/Intent#ACTION_PROCESS_TEXT.
-
-         In particular, this is used by the Flutter engine in io.flutter.plugin.text.ProcessTextPlugin. -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <!-- Permissions for Foreground Service -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission
-        android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC"
+        android:name="android.permission.FOREGROUND_SERVICE_REMOTE_MESSAGING"
     />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission
+        android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"
+    />
 
     <queries>
         <intent>
