--- a/flatpak_flutter.yaml
+++ b/flatpak_flutter.yaml
@@ -1,6 +1,6 @@
 id: gd.nexus.teleport
 runtime: org.freedesktop.Platform
-runtime-version: '25.08'
+runtime-version: "25.08"
 sdk: org.freedesktop.Sdk
 sdk-extensions:
   - org.freedesktop.Sdk.Extension.llvm20
@@ -36,10 +36,12 @@ modules:
       - install -D $BUNDLE_PATH/teleport /app/bin/teleport
       - cp -r $BUNDLE_PATH/lib /app/bin/lib
       - cp -r $BUNDLE_PATH/data /app/bin/data
+      - install -Dm644 linux/gd.nexus.teleport.desktop /app/share/applications/gd.nexus.teleport.desktop
+      - install -Dm644 images/small_logo_teleport.png /app/share/icons/hicolor/128x128/apps/gd.nexus.teleport.png
     sources:
       - type: git
         url: https://github.com/shadowcpy/teleport.git
-        commit: 1003fa3dea90dc87cdf3a8d7330b5f7eb820c40b       
+        commit: 5181fad01447d5210a3e15e1391dc59d622d7d14
       - type: git
         url: https://github.com/flutter/flutter.git
         tag: 3.38.5
