--- a/linux/gd.nexus.teleport.desktop
+++ b/linux/gd.nexus.teleport.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Name=Teleport
 Comment=Magical File Transfer
-Exec=flatpak run --branch=stable --arch=x86_64 --command=teleport --file-forwarding gd.nexus.teleport @@ %f @@
+Exec=teleport
 Icon=gd.nexus.teleport
 Categories=Utility;
 Terminal=false
