--- a/flatpak_flutter.yaml
+++ b/flatpak_flutter.yaml
@@ -10,7 +10,7 @@ finish-args:
   - --share=network
   - --socket=fallback-x11
   - --socket=wayland
-  - --socket=session-bus
+  - --talk-name=org.kde.StatusNotifierWatcher
   - --device=dri
 modules:
   - shared-modules/libappindicator/libappindicator-gtk3-12.10.json
@@ -41,7 +41,7 @@ modules:
     sources:
       - type: git
         url: https://github.com/shadowcpy/teleport.git
-        commit: ae020be41f87416eb38638bba7543289ae2a28ae 
+        commit: dffe0918be820861d926cf0ae80ead8545478340
       - type: git
         url: https://github.com/flutter/flutter.git
         tag: 3.38.5
