--- a/flatpak_flutter.yaml
+++ b/flatpak_flutter.yaml
@@ -11,6 +11,7 @@ finish-args:
   - --socket=fallback-x11
   - --socket=wayland
   - --talk-name=org.kde.StatusNotifierWatcher
+  - --talk-name=org.freedesktop.Notifications
   - --device=dri
 modules:
   - shared-modules/libappindicator/libappindicator-gtk3-12.10.json
@@ -41,7 +42,7 @@ modules:
     sources:
       - type: git
         url: https://github.com/shadowcpy/teleport.git
-        commit: 74e3bdfdd00607601992a5eb553e31b780ed695b
+        commit: c049ec96cbc439d899536823f5db30e60352f9ad
       - type: git
         url: https://github.com/flutter/flutter.git
         tag: 3.38.5
