add notify perm

--- a/gd.nexus.teleport.yaml
+++ b/gd.nexus.teleport.yaml
@@ -13,6 +13,7 @@ finish-args:
   - --socket=fallback-x11
   - --socket=wayland
   - --talk-name=org.kde.StatusNotifierWatcher
+  - --talk-name=org.freedesktop.Notifications
   - --device=dri
 modules:
   - shared-modules/libappindicator/libappindicator-gtk3-12.10.json
@@ -44,7 +45,7 @@ modules:
     sources:
       - type: git
         url: https://github.com/shadowcpy/teleport.git
-        commit: c049ec96cbc439d899536823f5db30e60352f9ad
+        commit: fd53300412d3642467231efd41d89325b20b1e9d
       - generated/sources/cargo.json
       - generated/sources/pubspec.json
     modules:
